services/craftingwiththesquad.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: craftingwiththesquad-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  selector:
    app: craftingwiththesquad
  ports:
    - port: 25565
      targetPort: 25565
  type: LoadBalancer
