services/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: millionwatts-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
    - hosts:
      - mohammad.dev
      - api.mohammad.dev
      # - craftingwiththesquad.mohammad.dev
      # - family-injera.mohammad.dev
      # - alpha.mohammad.dev
      # - api.alpha.mohammad.dev
      # - sso.mohammad.dev
      # - dashboard.mohammad.dev
      secretName: millionwatts-kubernetes-tls
  rules:
    - host: mohammad.dev
      http:
        paths:
          - backend:
              serviceName: modev
              servicePort: 80
    - host: api.mohammad.dev
      http:
        paths:
          - backend:
              serviceName: modev-server
              servicePort: 80
    # - host: family-injera.mohammad.dev
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: family-injera
    #           servicePort: 80
    # - host: api.mohammad.dev
    #   http:
    #     paths:
    #       - path: /auth
    #         backend:
    #           serviceName: modev-auth
    #           servicePort: 80
    #       - path: /portfolio
    #         backend:
    #           serviceName: modev-portfolio
    #           servicePort: 80
    #       - path: /photography
    #         backend:
    #           serviceName: modev-photography
    #           servicePort: 80
